fix footer alignment and content title size on small screens

--- a/wp-content/themes/toolbox v2/style.scss
+++ b/wp-content/themes/toolbox v2/style.scss
@@ -391,14 +391,6 @@ body {
 	.header {
 		overflow: hidden;
 	}
-	footer p,
-	footer nav {
-		padding-left: $baseline;
-		padding-right: $baseline;
-	}
-	footer nav {
-		margin-left: -0.5em;
-	}
 }
 
 /* Navigation */
@@ -448,7 +440,7 @@ body {
 		display: none;
 	}
 }
-@media (max-width: 40em) {
+@media (max-width: 641px) {
 
 	.primary-nav {
 		margin-left: ($baseline * -1);
@@ -536,6 +528,10 @@ body {
 		margin: 0;
 		padding: 0;
 		vertical-align: top;
+
+		@media (max-width: 40em) {
+			display: block;
+		}
 	}
 	li {
 		display: inline-block;
@@ -543,6 +539,12 @@ body {
 		padding-top: .25em;
 		position: relative;
 		vertical-align: top;
+		text-decoration: none;
+
+		@media (max-width: 40em) {
+			display: block;
+			margin: 0;
+		}
 	}
 	a {
 		border-radius: 1.5em;
@@ -553,6 +555,11 @@ body {
 		margin-bottom: ($baseline / 4);
 		padding: ($baseline / 3) ($baseline / 1.25);
 		text-decoration: none;
+
+		@media (max-width: 40em) {
+			padding-bottom: ($baseline / 2);
+			padding-top: ($baseline / 2);
+		}
 	}
 	a:hover,
 	a:focus {
@@ -571,6 +578,10 @@ body {
 		position: relative;
 		top: .25em;
 		vertical-align: top;
+
+		@media (max-width: 40em) {
+			display: block;
+		}
 	}
 }
 .side-nav {
@@ -1126,11 +1137,18 @@ body {
 		border-radius: ($baseline / 8) ($baseline / 8) 0 0;
 		// border-bottom: (($baseline / 4) / 2.25) solid $white;
 		color: $white;
-		font-size: ($baseline*1.333333333);
+		font-size: ($baseline * 1.333333333);
 		margin: -.75em -.75em .75em;
 		padding: .5675em 2em .5675em .75em;
 		position: relative;
 		text-transform: uppercase;
+
+		@media (max-width: 40em) {
+			border-radius: ($baseline / 6) ($baseline / 6) 0 0;
+			font-size: $baseline;
+			margin: -1em -1em 1em;
+			padding: .75em 2.8em .75em 1em;
+		}
 	}
 	hr {
 		border: 0;
@@ -1336,6 +1354,13 @@ body {
 			-webkit-animation: back-to-top 1s infinite ease;
 				-ms-animation: back-to-top 1s infinite ease;
 					animation: back-to-top 1s infinite ease;
+		}
+		@media (max-width: 40em) {
+			height: 2.8em;
+			line-height: 2.8;
+			right: 0;
+			top: 0;
+			width: 2.8em;
 		}
 	}
 	dt {
@@ -1570,6 +1595,9 @@ footer {
 		max-width: 30em;
 		padding: .675em 0 !important;
 
+		@media (max-width: 40em) {
+			max-width: 100%;
+		}
 		.search-form {
 			font-size: .875em !important;
 		}
@@ -1598,6 +1626,15 @@ footer {
 	.copyright-info {
 		position: relative;
 		top: -0.375em;
+	}
+	@media (max-width: 40em) {
+		span {
+			display: block;
+			margin-top: ($baseline);
+		}
+		span + span {
+			margin-top: ($baseline / 2);
+		}
 	}
 }
 .social-links {
